Make the play/pause button in <video> controls indicate the button's action, not the movie state

This matches the Mac behavior, iTunes, and many other media players.

No test possible.

Fixes <http://webkit.org/b/29126> Play/pause button in <video>
controls shows the wrong image

Reviewed by Eric Carlson.

* rendering/RenderMediaControls.cpp:
(WebCore::RenderMediaControls::paintMediaControlsPart): Reversed when
we show the play vs. pause artwork, so that the button reflects what
will happen when you click it, rather than the current state of the
movie.

Canonical link: https://commits.webkit.org/39824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48255 268f45cc-cd09-0410-ab3c-d52691b4dbfc